Added backend for applications and modules
